added a few style changes and typeform for first course test

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="shortcut icon" href="favicon.ico">
   <link href='http://fonts.googleapis.com/css?family=Lato:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/plugins/prism/prism.css">
   <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -67,7 +67,7 @@
   <section id="about" class="about section">
     <div class="container">
       <h2 class="title text-center">What is warwickCoding?</h2>
-      <p class="intro text-center">an interesting and affordable access to the world of coding, we present to you a chance to learn a skill set unique to only a few.</p>
+      <p class="intro text-center">warwickCoding is an interesting and affordable access to the world of coding, we present to you a chance to learn a skill set unique to only a few but desired by many</p>
       <div class="row">
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
@@ -75,7 +75,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Founded in 2014</h3>
-            <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ </p>
+            <p>After a successful first year we are hoping to give another group of students the foundations on which they can build their coding skills</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -84,7 +84,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">127 Student reached</h3>
-            <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ </p>
+            <p>In one year we were able to teach 127 students how to build a website and we aim to give as many people the skills to achieve their goals this year</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -93,9 +93,11 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Course Diversity</h3>
-            <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ </p>
+            <p>Whether you want to learn to build a website or an app we have a wide variety of courses for students to choose from</p>
           </div>
         </div>
+      </div>
+      <div class="row">
         <!-- <div class="clearfix visible-md"></div> -->
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
@@ -112,7 +114,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Growing Number of Courses</h3>
-            <p>Outline a benefit here. Tell users what your plugin/software can do for them. You can change the icon above to any of the 400+ </p>
+            <p>Last year we only offered courses on website building but this year we have expanded and we now offer a course on Android development as well</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -184,7 +186,7 @@
           <li>Great intro to Ruby on Rails</li>
           <li class="read-more">Try Ruby in your <a href="http://tryruby.org/levels/1/challenges/0" target="_blank">browser</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="#" target="_blank">Sign Up</a>
+        <a class="btn btn-cta-primary" href="ruby-form.html" target="_blank">Sign Up</a>
       </div>
     </div>
   </section>
