--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
   <script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-  <script type="text/javascript" src="assets/js/main.js"></script>
+  <script type="text/javascript" src="assets/js/min/main-min.js"></script>
 </body>
 
 </html>
