--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
-            <i class="fa fa-clock-o"></i>
+            <i class="fa fa-graduation-cap"></i>
           </div>
           <div class="content">
             <h3 class="sub-title">127 Student reached</h3>
@@ -100,7 +100,8 @@
         <!-- <div class="clearfix visible-md"></div> -->
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
-            <i class="fa fa-tablet"></i>
+            <i class="fa fa-female"></i>
+            <i class="fa fa-male"></i>
           </div>
           <div class="content">
             <h3 class="sub-title">Gender Ratio</h3>
@@ -109,7 +110,7 @@
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
-            <i class="fa fa-code"></i>
+            <i class="fa fa-line-chart"></i>
           </div>
           <div class="content">
             <h3 class="sub-title">Growing Number of Courses</h3>
@@ -118,7 +119,7 @@
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
-            <i class="fa fa-coffee"></i>
+            <i class="fa fa-money"></i>
           </div>
           <div class="content">
             <h3 class="sub-title">Affordable Courses</h3>
@@ -187,6 +188,9 @@
         </ul>
         <a class="btn btn-cta-primary" href="ruby-form.html" target="_blank">Sign Up</a>
       </div>
+    </div>
+    <div class="payment-info text-center">
+      <p>* We use <i class="fa fa-cc-stripe"></i> for all of our payments</p>
     </div>
   </section>
 
@@ -262,7 +266,8 @@
 
       </div>
       <div class="join-us">
-        <h3>We are currently recruiting for next year! If you want to join us, please get in touch </h3>
+        <h3>We are currently recruiting for next year!</h3>
+        <h3>If you want to join us, please get in touch </h3>
       </div>
     </div>
   </section>
@@ -292,7 +297,7 @@
       <p>Copyright <i class="fa fa-copyright"></i> warwickCoding 2015.</p>
     </div>
     <div class="madewith col-md-6 col-sm-6 col-xs-12">
-      <p>Built with <i class="fa fa-heart"></i> by warwickCoding for students.</p>
+      <p>Built with <i class="fa fa-heart"></i> & <i class="fa fa-bolt"></i> by warwickCoding.</p>
     </div>
   </footer>
 
