linked buttons to typeform

--- a/index.html
+++ b/index.html
@@ -134,7 +134,6 @@
   <section id="courses" class="courses section">
     <h1 class="title">Term 2 Courses</h1>
     <div class="row">
-
       <div id="frontend-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
         <h2 class="title">HTML & CSS</h2>
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
@@ -150,7 +149,8 @@
           <li>How to build a landing page</li>
           <li class="read-more">Read more about <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Introduction" target="_blank">HTML</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started/What_is_CSS" target="_blank">CSS3</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="#" target="_blank">Sign Up</a>
+        <a class="btn btn-cta-primary" id="typef_orm" href="https://warwickcoding.typeform.com/to/HJfUgx" data-mode="1" target="_blank">Sign up</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
       </div>
 
       <div id="android-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
@@ -168,7 +168,8 @@
           <li>Building an app from the first session</li>
           <li class="read-more">Read more about <a href="https://developer.android.com/index.html" target="_blank">Android</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="#" target="_blank">Sign Up</a>
+        <a class="btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/DG1zXW" data-mode="1" target="_blank">sign up</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
 
       <div id="ruby-course" class="container text-center col-md-4 col-sm-12 col-xs-12">
@@ -186,7 +187,8 @@
           <li>Great intro to Ruby on Rails</li>
           <li class="read-more">Try Ruby in your <a href="http://tryruby.org/levels/1/challenges/0" target="_blank">browser</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="ruby-form.html" target="_blank">Sign Up</a>
+        <a class="btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/ibWecm" data-mode="1" target="_blank">sign up</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
     </div>
     <div class="payment-info text-center">
@@ -249,7 +251,7 @@
 
         <div class="author-message-left col-lg-6">
           <div class="speech-bubble">
-            <img class="img-responsive" src="assets/images/raph.png" alt="" />
+            <img class="img-responsive" src="assets/images/fadi.png" alt="" />
             <h3 class="title">Fadi Hakim</h3>
             <h4 class="sub-title">Marketing</h4>
             <p>Class of 15' Economics</p>
@@ -258,7 +260,6 @@
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/fadi-hakim" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
-              <!-- <li><a href="https://www.linkedin.com/in/zaidlahham" target="_blank"><i class="fa fa-linkedin"></i></a></li> -->
               <li class="last"><a href="mailto: fadi@warwickcoding.com"><i class="fa fa-envelope"></i></a></li>
             </ul>
           </div>
@@ -297,7 +298,7 @@
       <p>Copyright <i class="fa fa-copyright"></i> warwickCoding 2015.</p>
     </div>
     <div class="madewith col-md-6 col-sm-6 col-xs-12">
-      <p>Built with <i class="fa fa-heart"></i> & <i class="fa fa-bolt"></i> by warwickCoding.</p>
+      <p>Built with <i class="fa fa-heart"></i> & <i class="fa fa-bolt"></i></p>
     </div>
   </footer>
 
