typeform buttons can popup the forms

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <section id="about" class="about section">
     <div class="container">
       <h2 class="title text-center">What is warwickCoding?</h2>
-      <p class="intro text-center">warwickCoding is an interesting and affordable access to the world of coding, we present to you a chance to learn a skill set unique to only a few but desired by many</p>
+      <p class="intro text-center">Our mission is to provide an interesting and affordable access to the world of coding, we present to you a chance to learn a skill set unique to only a few but desired by many</p>
       <div class="row">
         <div class="item col-md-4 col-sm-6 col-xs-12">
           <div class="icon-holder">
@@ -74,7 +74,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Founded in 2014</h3>
-            <p>After a successful first year we are hoping to give another group of students the foundations on which they can build their coding skills</p>
+            <p>After a successful first year, we are hoping to give another group of students the foundations on which they can build their coding skills</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -105,7 +105,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Gender Ratio</h3>
-            <p>We are one of the few coding courses had more than 50% female students.</p>
+            <p>We are one of the few coding courses that have more than 50% female students</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -114,7 +114,7 @@
           </div>
           <div class="content">
             <h3 class="sub-title">Growing Number of Courses</h3>
-            <p>Last year we only offered courses on website building but this year we have expanded and we now offer a course on Android development as well</p>
+            <p>Last year we only offered courses on website building but this year we have expanded and we now offer a course on Android and Ruby development</p>
           </div>
         </div>
         <div class="item col-md-4 col-sm-6 col-xs-12">
@@ -134,6 +134,7 @@
   <section id="courses" class="courses section">
     <h1 class="title">Term 2 Courses</h1>
     <div class="row">
+
       <div id="frontend-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
         <h2 class="title">HTML & CSS</h2>
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
@@ -149,8 +150,8 @@
           <li>How to build a landing page</li>
           <li class="read-more">Read more about <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Introduction" target="_blank">HTML</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started/What_is_CSS" target="_blank">CSS3</a></li>
         </ul>
-        <a class="btn btn-cta-primary" id="typef_orm" href="https://warwickcoding.typeform.com/to/HJfUgx" data-mode="1" target="_blank">Sign up</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/fBBa6S" data-mode="1" target="_blank">SIGN UP</a>
+        <script>(function(){var e,s,t,l,a=document,c=a.getElementById,r=a.createElement,n=a.getElementsByTagName,m="typef_orm",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";c.call(a,m)||(s=r.call(a,"script"),s.id=m,s.src=o+"share.js",t=n.call(a,"script")[0],t.parentNode.insertBefore(s,t)),m+="_",c.call(a,m)||(e=r.call(a,"link"),e.rel="stylesheet",e.id=m,e.href="assets/css/styles.css",l=n.call(a,"head")[0],l.appendChild(e,l))}();</script>
       </div>
 
       <div id="android-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
@@ -168,7 +169,7 @@
           <li>Building an app from the first session</li>
           <li class="read-more">Read more about <a href="https://developer.android.com/index.html" target="_blank">Android</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/DG1zXW" data-mode="1" target="_blank">sign up</a>
+        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/Z8v7PN" data-mode="1" target="_blank">SIGN UP</a>
         <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
 
@@ -187,10 +188,13 @@
           <li>Great intro to Ruby on Rails</li>
           <li class="read-more">Try Ruby in your <a href="http://tryruby.org/levels/1/challenges/0" target="_blank">browser</a></li>
         </ul>
-        <a class="btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/ibWecm" data-mode="1" target="_blank">sign up</a>
+        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/io73kp" data-mode="1" target="_blank">SIGN UP</a>
         <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+
       </div>
+
     </div>
+
     <div class="payment-info text-center">
       <p>* We use <i class="fa fa-cc-stripe"></i> for all of our payments</p>
     </div>
@@ -255,8 +259,8 @@
             <h3 class="title">Fadi Hakim</h3>
             <h4 class="sub-title">Marketing</h4>
             <p>Class of 15' Economics</p>
-            <p>If you like what I do, you can follow me </p>
-            <p>more info here</p>
+            <p>I am deeply fascinated by how coding changes one's world</p>
+            <!-- <p>more info here</p> -->
             <ul class="social-icons list-inline">
               <li><a href="https://github.com/fadi-hakim" target="_blank"><i class="fa fa-github"></i></a></li>
               <li><a href="https://www.twitter.com/fadihakim93" target="_blank"><i class="fa fa-twitter"></i></a></li>
@@ -267,8 +271,8 @@
 
       </div>
       <div class="join-us">
-        <h3>We are currently recruiting for next year!</h3>
-        <h3>If you want to join us, please get in touch </h3>
+        <h3>We are currently recruiting Teachers and a Head of Marketing for next year!</h3>
+        <h3>If you would like to introduce/take over a course for next year, please get in touch</h3>
       </div>
     </div>
   </section>
