added the typeform for teachers

--- a/index.html
+++ b/index.html
@@ -271,8 +271,8 @@
 
       </div>
       <div class="join-us">
-        <h3>We are currently recruiting Teachers and a Head of Marketing for next year!</h3>
-        <h3>If you would like to introduce/take over a course for next year, please get in touch</h3>
+        <h3>We are currently recruiting Teachers and a Head of Marketing for next year! If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
       </div>
     </div>
   </section>
@@ -284,7 +284,7 @@
         <h2 class="title  text-center">Contact</h2>
         <div class="clearfix"></div>
         <div class="info text-center">
-          <h4 class="sub-title">Get Connected</h4>
+          <h4 class="sub-title">If you have questions on our courses or on any other matter</h4>
           <ul class="social-icons list-inline">
             <li><a href="https://github.com/warwickcoding" target="_blank"><i class="fa fa-github"></i></a></li>
             <li><a href="https://www.facebook.com/warwickcoding" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -294,7 +294,6 @@
       </div>
     </div>
   </section>
-
 
   <!-- ******FOOTER****** -->
   <footer class="footer row">
