added christmas pricing

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- <h2 class="title">Welcome to warwickCoding</h2> -->
       <!-- <p class="intro">Learn to code at Warwick.</p> -->
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">Register!</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Christmas Offer!</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -152,7 +152,7 @@
             <strong>Beginners</strong>
           </li>
           <li>Price:
-            <strong>£50</strong>
+            <strong><span class="christmas-offer">£50</span> £40</strong>
           </li>
           <li>8 X 2 hour session</li>
           <li>Great introduction to coding for the web</li>
@@ -171,7 +171,7 @@
             <strong>Intermediate</strong>
           </li>
           <li>Price:
-            <strong>£60</strong>
+            <strong><span class="christmas-offer">£60</span> £50</strong>
           </li>
           <li>8 X 2 hour sessions</li>
           <li>Teaching real project management and developer skills</li>
@@ -190,7 +190,7 @@
             <strong>Beginner/Intermediate</strong>
           </li>
           <li>Price:
-            <strong>£60</strong>
+            <strong><span class="christmas-offer">£60</span> £50</strong>
           </li>
           <li>8 X 2 hour sessions</li>
           <li>Object Oriented Language</li>
