--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <strong>Intermediate</strong>
           </li>
           <li>Price:
-            <strong><span class="christmas-offer">£60</span> £50</strong>
+            <strong>£60</strong>
           </li>
           <li>8 X 2 hour sessions</li>
           <li>Teaching real project management and developer skills</li>
@@ -190,7 +190,7 @@
             <strong>Beginner/Intermediate</strong>
           </li>
           <li>Price:
-            <strong><span class="christmas-offer">£60</span> £50</strong>
+            <strong>£60</strong>
           </li>
           <li>8 X 2 hour sessions</li>
           <li>Object Oriented Language</li>
