--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
     ga('create', 'UA-71626066-1', 'auto');
     ga('send', 'pageview');
@@ -148,36 +148,48 @@
         <h2 class="title">HTML & CSS</h2>
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
         <ul class="feature-list list-unstyled">
-          <li>Level:
-            <strong>Beginners</strong>
-          </li>
-          <li>Price:
-            <strong><span class="christmas-offer">£50</span> £40</strong>
-          </li>
+          <li>Level: <strong>Beginners</strong></li>
+          <li>Price: Christmas offer <strong><span class="christmas-offer">£50</span> £40</strong></li>
           <li>8 X 2 hour session</li>
           <li>Great introduction to coding for the web</li>
           <li>How to build a landing page</li>
-          <li class="read-more">Read more about <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Introduction" target="_blank">HTML</a> & <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Getting_started/What_is_CSS" target="_blank">CSS3</a></li>
+          <li class="read-more"><a>More details on the course</a></li>
         </ul>
+        <div class="course-details">
+          <h4>Starting Week 3 | Wednesdays 4-6</h4>
+          <p>First 4 sessions:</p>
+          <ul class="feature-list list-unstyled">
+            <li>Intro to the web</li>
+            <li>HTML Intro</li>
+            <li>HTML Advanced </li>
+            <li>CSS Intro</li>
+          </ul>
+        </div>
         <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/fBBa6S" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var e,s,t,l,a=document,c=a.getElementById,r=a.createElement,n=a.getElementsByTagName,m="typef_orm",o="https://s3-eu-west-1.amazonaws.com/share.typeform.com/";c.call(a,m)||(s=r.call(a,"script"),s.id=m,s.src=o+"share.js",t=n.call(a,"script")[0],t.parentNode.insertBefore(s,t)),m+="_",c.call(a,m)||(e=r.call(a,"link"),e.rel="stylesheet",e.id=m,e.href="assets/css/styles.css",l=n.call(a,"head")[0],l.appendChild(e,l))}();</script>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
 
       <div id="android-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
         <h2 class="title">Android</h2>
         <h2 class="title"><i class="fa fa-android"></i></h2>
         <ul class="feature-list list-unstyled">
-          <li>Level:
-            <strong>Intermediate</strong>
-          </li>
-          <li>Price:
-            <strong>£60</strong>
-          </li>
+          <li>Level: <strong>Intermediate</strong></li>
+          <li>Price: <strong>£60</strong></li>
           <li>8 X 2 hour sessions</li>
           <li>Teaching real project management and developer skills</li>
           <li>Building an app from the first session</li>
-          <li class="read-more">Read more about <a href="https://developer.android.com/index.html" target="_blank">Android</a></li>
+          <li class="read-more"><a>More details on the course</a></li>
         </ul>
+        <div class="course-details">
+          <h4>Starting Week 3 | Fridays 5-7</h4>
+          <p>First 4 sessions:</p>
+          <ul class="feature-list list-unstyled">
+            <li>A new Project/XML intro</li>
+            <li>Java Intro</li>
+            <li>Objects and Lists </li>
+            <li>Building a 3rd activity</li>
+          </ul>
+        </div>
         <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/Z8v7PN" data-mode="1" target="_blank">SIGN UP</a>
         <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
       </div>
@@ -186,17 +198,23 @@
         <h2 class="title">Ruby</h2>
         <h2 class="title"><i class="fa fa-diamond"></i></h2>
         <ul class="feature-list list-unstyled">
-          <li>Level:
-            <strong>Beginner/Intermediate</strong>
-          </li>
-          <li>Price:
-            <strong>£60</strong>
-          </li>
+          <li>Level: <strong>Beginner/Intermediate</strong></li>
+          <li>Price: <strong>£60</strong></li>
           <li>8 X 2 hour sessions</li>
           <li>Object Oriented Language</li>
           <li>Great intro to Ruby on Rails</li>
-          <li class="read-more">Try Ruby in your <a href="http://tryruby.org/levels/1/challenges/0" target="_blank">browser</a></li>
+          <li class="read-more"><a>More details on the course</a></li>
         </ul>
+        <div class="course-details">
+          <h4>Starting Week 3 | Tuesdays 5-7</h4>
+          <p>First 4 sessions:</p>
+          <ul class="feature-list list-unstyled">
+            <li>Ruby & command line Intro</li>
+            <li>Numbers, strings, properties</li>
+            <li>Arrays, variable, methods</li>
+            <li>Creating methods</li>
+          </ul>
+        </div>
         <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/io73kp" data-mode="1" target="_blank">SIGN UP</a>
         <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
 
@@ -320,7 +338,7 @@
   <script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
-  <script type="text/javascript" src="assets/js/min/main-min.js"></script>
+  <script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
 
