changes back to pre-christmas prices

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!-- <h2 class="title">Welcome to warwickCoding</h2> -->
       <!-- <p class="intro">Learn to code at Warwick.</p> -->
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">Christmas Offer!</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Sign Up!</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -149,7 +149,7 @@
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginners</strong></li>
-          <li>Price: Christmas offer <strong><span class="christmas-offer">£50</span> £40</strong></li>
+          <li>Price: <strong>£50</li>
           <li>8 X 2 hour session</li>
           <li>Great introduction to coding for the web</li>
           <li>How to build a landing page</li>
