--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
   <link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/plugins/font-awesome-4.5.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/plugins/owl-carousel/owl.carousel.css">
+  <link rel="stylesheet" href="assets/plugins/owl-carousel/owl.theme.css">
   <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -227,6 +229,32 @@
     </div>
   </section>
 
+  <section id="testimonials" class="testimonials section">
+    <!-- <h2 class="title">Testimonials</h2> -->
+    <div class="owl-carousel owl-theme" id="student-testimonials">
+      <div class="item">
+        <p>Good speed, a lot was covered, lecturer was great.</p>
+        <sub>- Enginnering 2nd Year</sub>
+      </div>
+      <div class="item">
+        <p>It was great that we learned by actually writing code.</p>
+        <sub>- History 1st Year</sub>
+      </div>
+      <div class="item">
+        <p>It was very well taught. I enjoyed every session.</p>
+        <sub>- WMG Postgrad</sub>
+      </div>
+      <div class="item">
+        <p>It's great to be learning something completely new and outside my normal interests</p>
+        <sub>- Management 3rd Year</sub>
+      </div>
+      <div class="item">
+        <p>Particularly benefited from pairing up and getting to know the person sitting next to us.</p>
+        <sub>- Law 2nd Year</sub>
+      </div>
+    </div>
+  </section>
+
   <!-- ******TEAM****** -->
   <section id="team" class="team section">
     <div class="container">
@@ -333,11 +361,12 @@
   </footer>
 
   <!-- Javascript -->
-  <script type="text/javascript" src="assets/plugins/jquery-1.11.1.min.js"></script>
+  <script type="text/javascript" src="assets/plugins/jquery-2.1.4.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-migrate-1.2.1.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery.easing.1.3.js"></script>
   <script type="text/javascript" src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
   <script type="text/javascript" src="assets/plugins/jquery-scrollTo/jquery.scrollTo.min.js"></script>
+  <script type="text/javascript" src="assets/plugins/owl-carousel/owl.carousel.js"></script>
   <script type="text/javascript" src="assets/js/main.js"></script>
 
 </body>
