added info about group discount

--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
 
     <div class="payment-info text-center">
       <p>* We use <i class="fa fa-cc-stripe"></i> for all of our payments</p>
+      <sup>If you sign up to any of the courses with a friend, you will be eligible for a group discount. More details on the sign up forms</sup>
     </div>
   </section>
 
