removed new years pricing

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <!-- <h2 class="title">Welcome to warwickCoding</h2> -->
       <!-- <p class="intro">Learn to code at Warwick.</p> -->
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">New Years Offer!</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Sign Up!</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -176,7 +176,7 @@
         <h2 class="title"><i class="fa fa-android"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Intermediate</strong></li>
-          <li>New years price: <strong><span class="offer">£60</span> £50</strong></li>
+          <li>Price: <strong>£60</li>
           <li>8 X 2 hour sessions</li>
           <li>Teaching real project management and developer skills</li>
           <li>Building an app from the first session</li>
@@ -201,7 +201,7 @@
         <h2 class="title"><i class="fa fa-diamond"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginner/Intermediate</strong></li>
-          <li>New years price: <strong><span class="offer">£60</span> £50</strong></li>
+          <li>Price: <strong>£60</li>
           <li>8 X 2 hour sessions</li>
           <li>Object Oriented Language</li>
           <li>Great intro to Ruby on Rails</li>
