fixed typo in team

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
             <img class="img-responsive" src="assets/images/zaid.png" alt="" />
             <h3 class="title">Zaid Al Lahham</h3>
             <h4 class="sub-title">Frontend and Ruby Course</h4>
-            <p>Class of 15' Engineering</p>
+            <p>Class of '15 Engineering</p>
             <p>Technology & gadgets are my weak spot</p>
             <p>I got my real taste of software development at <a href="http://www.makersacademy.com/" target="_blank">Makers Academy</a></p>
             <ul class="social-icons list-inline">
@@ -314,7 +314,7 @@
             <img class="img-responsive" src="assets/images/fadi.png" alt="" />
             <h3 class="title">Fadi Hakim</h3>
             <h4 class="sub-title">Marketing</h4>
-            <p>Class of 15' Economics</p>
+            <p>Class of '15 Economics</p>
             <p>I am deeply fascinated by how coding changes one's world</p>
             <!-- <p>more info here</p> -->
             <ul class="social-icons list-inline">
