--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
         <h2 class="title"><i class="fa fa-html5"></i> <i class="fa fa-css3"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginners</strong></li>
-          <li>Price: <span class="offer">£50 </span><strong>£40</strong></li>
+          <li>Price: <strong>£50</strong></li>
           <li>8 X 2 hour session</li>
           <li>Great introduction to coding for the web</li>
           <li>How to build a landing page</li>
@@ -176,7 +176,7 @@
         <h2 class="title"><i class="fa fa-android"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Intermediate</strong></li>
-          <li>Price: <span class="offer">£60 </span><strong>£50</strong></li>
+          <li>Price: <strong>£60</strong></li>
           <li>8 X 2 hour sessions</li>
           <li>Teaching real project management and developer skills</li>
           <li>Building an app from the first session</li>
@@ -201,7 +201,7 @@
         <h2 class="title"><i class="fa fa-diamond"></i></h2>
         <ul class="feature-list list-unstyled">
           <li>Level: <strong>Beginner/Intermediate</strong></li>
-          <li>Price: <span class="offer">£60 </span><strong>£50</strong></li>
+          <li>Price: <strong>£60</strong></li>
           <li>8 X 2 hour sessions</li>
           <li>Object Oriented Language</li>
           <li>Great intro to Ruby on Rails</li>
