--- a/index.html
+++ b/index.html
@@ -17,10 +17,17 @@
   <link rel="stylesheet" href="assets/plugins/owl-carousel/owl.theme.css">
   <link id="theme-style" rel="stylesheet" href="assets/css/styles.css">
   <script>
-    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+        m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
     ga('create', 'UA-71626066-1', 'auto');
     ga('send', 'pageview');
@@ -64,10 +71,8 @@
   <section id="promo" class="promo section offset-header">
     <div class="container text-center">
       <img class="img-responsive" src="assets/images/welcomeToWC.png">
-      <!-- <h2 class="title">Welcome to warwickCoding</h2> -->
-      <!-- <p class="intro">Learn to code at Warwick.</p> -->
       <div class="btns">
-        <a class="btn btn-cta-secondary scrollto" href="#courses">Start of Term Offer!</a>
+        <a class="btn btn-cta-secondary scrollto" href="#courses">Registration Closed</a>
         <a class="btn btn-cta-primary scrollto" href="#about">Learn More</a>
       </div>
     </div>
@@ -167,8 +172,8 @@
             <li>CSS Intro</li>
           </ul>
         </div>
-        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/fBBa6S" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/fBBa6S" data-mode="1" target="_blank">SIGN UP</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
       </div>
 
       <div id="android-course" class="container text-center col-md-4 col-sm-6 col-xs-12">
@@ -192,8 +197,8 @@
             <li>Building a 3rd activity</li>
           </ul>
         </div>
-        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/Z8v7PN" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
+        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/Z8v7PN" data-mode="1" target="_blank">SIGN UP</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
       </div>
 
       <div id="ruby-course" class="container text-center col-md-4 col-sm-12 col-xs-12">
@@ -217,9 +222,8 @@
             <li>Creating methods</li>
           </ul>
         </div>
-        <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/io73kp" data-mode="1" target="_blank">SIGN UP</a>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script>
-
+        <!-- <a class="typeform-share button btn btn-cta-primary" href="https://warwickcoding.typeform.com/to/io73kp" data-mode="1" target="_blank">SIGN UP</a>
+        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}id=id+'_';if(!gi.call(d,id)){qs=ce.call(d,'link');qs.rel='stylesheet';qs.id=id;qs.href=b+'share-button.css';s=gt.call(d,'head')[0];s.appendChild(qs,s)}})()</script> -->
       </div>
 
     </div>
@@ -328,7 +332,23 @@
       </div>
       <div class="join-us">
         <h3>We are currently recruiting Teachers and a Head of Marketing for next year! If you would like to introduce/take over a course or apply for Marketing, please fill in this   <a class="typeform-share link" href="https://warwickcoding.typeform.com/to/tbuPbb" data-mode="1" target="_blank">form</a></h3>
-        <script>(function(){var qs,js,q,s,d=document,gi=d.getElementById,ce=d.createElement,gt=d.getElementsByTagName,id='typef_orm',b='https://s3-eu-west-1.amazonaws.com/share.typeform.com/';if(!gi.call(d,id)){js=ce.call(d,'script');js.id=id;js.src=b+'share.js';q=gt.call(d,'script')[0];q.parentNode.insertBefore(js,q)}})()</script>
+        <script>
+          (function() {
+            var qs, js, q, s, d = document,
+              gi = d.getElementById,
+              ce = d.createElement,
+              gt = d.getElementsByTagName,
+              id = 'typef_orm',
+              b = 'https://s3-eu-west-1.amazonaws.com/share.typeform.com/';
+            if (!gi.call(d, id)) {
+              js = ce.call(d, 'script');
+              js.id = id;
+              js.src = b + 'share.js';
+              q = gt.call(d, 'script')[0];
+              q.parentNode.insertBefore(js, q)
+            }
+          })()
+        </script>
       </div>
     </div>
   </section>
